// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> component renders section component 1`] = `
.emotion-0 {
  margin-top: 32px;
  background-color: #FFFFFF;
  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.1);
  padding: 32px;
}

.emotion-0>div:first-of-type {
  padding-top: 24px;
}

.emotion-2 {
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.23;
  margin: 0;
  color: #151617;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-8 p:first-of-type {
  display: block;
  padding-right: 0;
}

.emotion-8 p:last-child {
  display: block;
}

.emotion-10 {
  font-weight: 400;
  font-size: 0.75rem;
  line-height: 1.34;
  margin: 0;
  color: #8B8C8C;
}

.emotion-12 {
  font-weight: 400;
  font-size: 1.125rem;
  line-height: 1.34;
  margin: 0;
  color: #151617;
}

.emotion-20 p:first-of-type {
  display: inline;
  padding-right: 10px;
}

.emotion-20 p:last-child {
  display: inline;
}

<div>
  <section
    class="emotion-0 emotion-1"
    data-testid="section"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4 emotion-5"
        color="gray_300"
        data-testid="typography"
      >
        My Awesome Title
      </h2>
      <p>
        Some header info
      </p>
    </header>
    <div
      class="emotion-6 emotion-7"
      data-testid="subsection-container"
    >
      <div
        class="emotion-8 emotion-9"
        data-testid="section-detail"
      >
        <p
          class="emotion-10 emotion-5"
          color="gray_100"
          data-testid="typography"
        >
          Detail Title 1
        </p>
        <p
          class="emotion-12 emotion-5"
          color="gray_300"
          data-testid="typography"
        >
          First info
        </p>
      </div>
      <div
        class="emotion-8 emotion-9"
        data-testid="section-detail"
      >
        <p
          class="emotion-10 emotion-5"
          color="gray_100"
          data-testid="typography"
        >
          Detail Title 2
        </p>
        <p
          class="emotion-12 emotion-5"
          color="gray_300"
          data-testid="typography"
        >
          Second info
        </p>
      </div>
      <div
        class="emotion-20 emotion-9"
        data-testid="section-detail"
      >
        <p
          class="emotion-10 emotion-5"
          color="gray_100"
          data-testid="typography"
        >
          Detail Title 3
        </p>
        <p
          class="emotion-12 emotion-5"
          color="gray_300"
          data-testid="typography"
        >
          Third inline info
        </p>
      </div>
    </div>
    <h2
      class="emotion-4 emotion-5"
      color="gray_300"
      data-testid="typography"
      style="margin: 15px 0px;"
    >
      A subtitle
    </h2>
    <p>
      Some text content after a subtitle
    </p>
  </section>
</div>
`;

exports[`<Section /> component renders section component with loading content 1`] = `
@keyframes animation-0 {
  from {
    -webkit-transform: rotate(0);
    -moz-transform: rotate(0);
    -ms-transform: rotate(0);
    transform: rotate(0);
  }

  to {
    -webkit-transform: rotate(360deg);
    -moz-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  margin-top: 32px;
  background-color: #FFFFFF;
  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.1);
  padding: 32px;
}

.emotion-0>div:first-of-type {
  padding-top: 24px;
}

.emotion-2 {
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.23;
  margin: 0;
  color: #151617;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  width: 74px;
  height: 74px;
  border: 2px solid #CCCCCC;
  border-radius: 50%;
  border-top: 2px solid #0078D6;
  -webkit-animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
  animation: animation-0 1s cubic-bezier(0.3, 0.1, 0.25, 0.65) 0s infinite normal none;
}

<div>
  <section
    class="emotion-0 emotion-1"
    data-testid="section"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4 emotion-5"
        color="gray_300"
        data-testid="typography"
      >
        My Awesome Title
      </h2>
    </header>
    <div
      class="emotion-6 emotion-7"
      style="margin: 30px 0px;"
    >
      <div
        class="emotion-6 emotion-7"
        style="margin: auto;"
      >
        <div
          class="emotion-10 emotion-11"
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`<Section.Container /> component renders a div html element with correct content 1`] = `
.emotion-0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border: 1px solid #CCCCCC;
  border-top: none;
}

.emotion-2 {
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.23;
  margin: 0;
  color: #151617;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-item: center;
  -ms-flex-item-align-item: center;
  align-item: center;
  width: 100%;
  padding: 16px 32px;
  background-color: #F4F4F4;
}

<div>
  <div
    class="emotion-0 emotion-1"
    data-testid="default-section-container"
  >
    <header
      class="emotion-2 emotion-3"
    >
      <h2
        class="emotion-4 emotion-5"
        color="gray_300"
        data-testid="typography"
      >
        My Awesome Title
      </h2>
    </header>
    <div
      class="emotion-6 emotion-7"
      data-testid="default-section-footer"
    >
      Footer content
    </div>
  </div>
</div>
`;
